--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,8 @@
           </div>
 
           <nav>
+            <a href="http://enthusiasticprogrammers.com">Home</a>
+
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
